--- a/package.json
+++ b/package.json
@@ -5,17 +5,16 @@
   "scripts": {
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "update": "npm update"
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "bootstrap-vue": "^2.6.1",
-    "core-js": "^3.6.4",
-    "node-sass": "^4.13.1",
-    "sass-loader": "^8.0.2",
+    "bootstrap-vue": "^2.12.0",
+    "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
-    "vuex": "^3.1.2"
+    "vuex": "^3.3.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
@@ -24,7 +23,9 @@
     "@vue/cli-service": "~4.2.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.1.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^4.14.0",
+    "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
